add Tailwind CSS

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+
+
 :root {
     --background: #0d2b0f;
     --foreground: hsl(0, 14%, 89%);
@@ -20,10 +23,21 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+h1, h2 {
+    @apply font-bold mb-3;
+}
+
+h1 {
+    @apply text-4xl;
+}
+
+h2 {
+    @apply text-3xl;
+}
+
+
+p {
+    @apply mb-1;
 }
 
 a {
@@ -41,4 +55,5 @@ a:hover {
 main {
     max-width: 800px;
     margin: 4rem auto;
+    padding: 0 1rem;
 }
