--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,10 +2,11 @@
 
 
 :root {
-    --background: #0d2b0f;
+    --background: hsl(124, 54%, 11%);
     --foreground: hsl(0, 14%, 89%);
     --link: hsl(25, 100%, 50%);
     --link-hover: hsl(59, 100%, 50%);
+    --header-font: 'Carter One', cursive;
 }
 
 html,
@@ -19,20 +20,36 @@ body {
     color: var(--foreground);
     background: var(--background);
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     @apply font-bold mb-3;
+    font-family: var(--header-font);
 }
 
 h1 {
     @apply text-4xl;
+    text-transform: uppercase;
+    text-shadow: 0 .3em .5em black;
 }
 
 h2 {
     @apply text-3xl;
+    @apply mt-12;
+    text-shadow: 0 .5em .5em black;
+}
+
+h3 {
+    @apply mb-0;
+    @apply mt-4;
 }
 
 
@@ -54,6 +71,6 @@ a:hover {
 
 main {
     max-width: 800px;
-    margin: 4rem auto;
-    padding: 0 1rem;
+    margin: 0 auto;
+    padding: 4rem 1rem;
 }
