--- a/src/components/QuotesCarousel.module.css
+++ b/src/components/QuotesCarousel.module.css
@@ -1,4 +1,4 @@
-.quote-container {
+.quoteContainer {
     position: relative;
     height: 50vh;
     max-height: 20rem;
@@ -6,7 +6,7 @@
     line-height: .9;
 }
 
-.quote-item {
+.quoteItem {
     position: absolute;
     top: 0;
     left: 0;
@@ -18,21 +18,21 @@
     transition: opacity .4s ease-in-out;
 }
 
-.quote-current {
+.quoteCurrent {
     opacity: 1;
     z-index: 2;
 }
 
-.quote-previous {
+.quotePrevious {
     opacity: 0;
     z-index: 1;
 }
 
-.fade-out {
+.fadeOut {
     opacity: 0;
 }
 
-.fade-in {
+.fadeIn {
     opacity: 1;
 }
 
